# SMIT-HACKATHONE

./: .gitignore
backend/: main.py  pyproject.toml  university.txt
backend/config/: database.py
backend/data/: cafeteria.txt
backend/email_athuntication/: email.py
backend/model/: pydantic_model.py
backend/routes/: auth_routes.py  chat_routs.py  students_routes.py
backend/student_agent/: agent_help.py
backend/tools/: crud_tool.py  general_info.py
backend/utils/: auth_utils.py
frontend/: index.html  package-lock.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/chat/: ChatInput.tsx  ChatMessage.tsx  ChatSidebar.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx
frontend/src/components/ui/: button.tsx
frontend/src/pages/: Chat.tsx  Dashboard.tsx  Home.tsx  Login.tsx  ResetPassword.tsx  Signup.tsx
